fixed artifact link to be open in new tab #4

--- a/test_report_index.html
+++ b/test_report_index.html
@@ -2871,7 +2871,7 @@
                 {selectedNodeToDisplay.artifacts.map((artifact) => (
                   <div className="link-container" key={artifact}>
                     <i className="fas fa-paperclip"></i>
-                    <a href={artifact} download>
+                    <a href={artifact} target="_blank">
                       {artifact}
                     </a>
                   </div>
