fixed test name selection #10

--- a/test_report_index.html
+++ b/test_report_index.html
@@ -2842,7 +2842,7 @@
         return (
           <div className="name component-margin">
             <span className="blue">Name:</span>{" "}
-            <strong>{selectedNodeToDisplay.name}</strong>
+            <strong className="selector">{selectedNodeToDisplay.name}</strong>
           </div>
         );
       };
