finished CSS until .node class

--- a/index.html
+++ b/index.html
@@ -814,8 +814,8 @@
               <section className="content-section">
                 <div className="content-header">
                   <span className="action">Action</span>
-                  <span>Duration</span>
-                  <span>Artifacts</span>
+                  <span className="duration">Duration</span>
+                  <span className="artifacts">Artifacts</span>
                 </div>
                 <div>
                   <NodeTree
