fixed duration alignment

--- a/index.html
+++ b/index.html
@@ -813,9 +813,9 @@
             <div className="section-container">
               <section className="content-section">
                 <div className="content-header">
-                  <span className="action">Action</span>
-                  <span className="duration">Duration</span>
-                  <span className="artifacts">Artifacts</span>
+                  <span>Action</span>
+                  <span>Duration</span>
+                  <span>Artifacts</span>
                 </div>
                 <div>
                   <NodeTree
@@ -1462,7 +1462,7 @@
         return (
           <>
             <span>
-              <i className="fas fa-eye-slash iconIgnored" ></i>
+              <i className="fas fa-eye-slash iconIgnored"></i>
             </span>
           </>
         );
